src/test/deca/syntax/invalid/provided/if_else_invalide2.deca
{
if(7>5){
print(true);
}else(5 == 4){
}
